--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4"
+    "typescript": "3.6.4",
+    "core": "file:../core"
   },
   "scripts": {
     "start": "react-scripts start",
