--- a/web/package.json
+++ b/web/package.json
@@ -7,11 +7,13 @@
     "@types/node": "12.11.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "core": "file:../core",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
-    "typescript": "3.6.4",
-    "core": "file:../core"
+    "redux": "^4.0.4",
+    "typescript": "3.6.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.5",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
     "@typescript-eslint/parser": "^2.5.0",
     "eslint": "^6.6.0",
